[package]
name = "qinpel-stp"
description = "QinpelStp - Setup and step for Qinpel applications and commands."
repository = "https://github.com/emuvi/qinpel-stp/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.2.2"
edition = "2018"


[dependencies]
clap = "2.33"
url = "2.2"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"