[package]
name = "qinpel-stp"
description = "QinpelStp ( Qinpel Setup ) is a command program that transfers, installs and executes selected bundles of user interfaces and command programs for the Qinpel, the Quick Interface for Pointel platform."
repository = "https://github.com/emuvi/qinpel-stp/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["tokio-native-tls", "blocking", "stream"] }
futures-util = "0.3.14"
url = "2.2"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"